Add SMC engine, history system, and live analysis pages

--- a/backend/public/index.html
+++ b/backend/public/index.html
@@ -240,7 +240,7 @@
                 
                 <nav class="hidden md:flex items-center gap-6">
                     <a href="#" class="text-yellow text-sm font-medium hover:text-yellow-light transition">Dashboard</a>
-                    <a href="#" class="text-gray text-sm hover:text-white transition">Analysis</a>
+                    <1a href="#" class="text-gray text-sm hover:text-white transition">Analysis</1a>
                     <a href="#" class="text-gray text-sm hover:text-white transition">Trade History</a>
                     <a href="#" class="text-gray text-sm hover:text-white transition">Analytics</a>
                 </nav>
